--- a/jango/Employee/templates/Base.html
+++ b/jango/Employee/templates/Base.html
@@ -1,3 +1,5 @@
+ {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,38 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-        }
+    <link rel="stylesheet" href="{% static 'css/base.css'%}">
+    <script src = "{% static 'js/validate.js '%}"> </script>
 
-        .main {
-            width: 100%;
-            height: 20%;
-            background: aquamarine;
-
-        }
-
-        .left {
-
-            float: left;
-            background-color: bisque;
-            width: 100%;
-            height: 80%;
-            text-align: center;
-        }
-
-
-        /* .right {
-            float: right;
-            background-color: darkcyan;
-            width: 50%;
-            height: 80%;
-            text-align: center;  */
-        }
-    </style>
 </head>
 
 <body>
